Fix word wraping in tooltips

--- a/assets/stylesheets/table_it.scss
+++ b/assets/stylesheets/table_it.scss
@@ -39,7 +39,7 @@ body .ui-tooltip {
   border: 1px solid #888;
   background: #fff;
   border-radius: 0;
-
+  word-wrap: break-word;
 }
 
 form.home-filter {
